--- a/frontend/src/views/auth/register.njk
+++ b/frontend/src/views/auth/register.njk
@@ -10,7 +10,7 @@
         <div class="w-24 h-24 rounded-2xl flex items-center justify-center mb-4">
             <img src="/public/img/logo.png">
         </div>
-        <h1 class="text-2xl font-bold tracking-tight">Nexo<span class="text-[#FD420A]">Local</span></h1>
+        <h1 class="text-2xl font-bold tracking-tight">Nexo<span class="text-(--accent)">Local</span></h1>
     </div>
 
     <div class="auth-card bg-[#151B23]/90 p-8 sm:p-10 rounded-[2.5rem] shadow-2xl w-full">
@@ -70,7 +70,7 @@
                     </div>
 
                     <button type="submit"
-                        class="w-full bg-[#FD420A] hover:bg-[#E33A08] text-white py-4 rounded-2xl font-bold text-sm transition-all shadow-lg shadow-orange-900/20 active:scale-[0.98] mt-4 cursor-pointer">
+                        class="bg-(--accent) hover:bg-(--accent-hover) text-white px-6 py-3 rounded-2xl text-sm font-bold flex items-center justify-center gap-2 transition-all shadow-xl shadow-orange-900/20 active:scale-95 cursor-pointer w-full">
                         Crear mi Cuenta
                     </button>
                 </form>
@@ -106,7 +106,7 @@
     </div>
 
     <p id="toggle-text" class="text-center mt-10 text-sm text-gray-500">
-        ¿Ya eres miembro? <button onclick="render_login()" class="text-[#FD420A] font-bold hover:underline">Inicia
+        ¿Ya eres miembro? <button onclick="render_login()" class="text-(--accent) font-bold hover:underline cursor-pointer">Inicia
             sesión</button>
     </p>
 
