--- a/frontend/src/views/components/dashboard-sidebar.njk
+++ b/frontend/src/views/components/dashboard-sidebar.njk
@@ -7,7 +7,7 @@
                 <img src="/public/img/logo.png" alt="logo" />
             </div>
             <span class="font-bold text-xl tracking-tight sidebar-text">Nexo<span
-                    class="text-[#FD420A]">Local</span></span>
+                    class="text-(--accent)">Local</span></span>
         </div>
     </div>
     {% if user_companies | length > 0 %}
