--- a/frontend/src/views/platform/companies/main.njk
+++ b/frontend/src/views/platform/companies/main.njk
@@ -22,7 +22,7 @@
                     </li>
                 </ol>
                 <a href="/platform/companies/create"
-                    class="bg-[#FD420A] hover:bg-[#ff5a26] text-white px-6 py-3 rounded-2xl text-sm font-bold flex items-center justify-center gap-2 transition-all shadow-xl shadow-orange-900/20 active:scale-95">
+                    class="bg-(--accent) hover:bg-(--accent-hover) text-white px-6 py-3 rounded-2xl text-sm font-bold flex items-center justify-center gap-2 transition-all shadow-xl shadow-orange-900/20 active:scale-95 cursor-pointer">
                     <i class="fa-solid fa-plus"></i>
                     Nuevo Negocio
                 </a>
@@ -148,7 +148,7 @@
                 <button
                     class="px-4 py-2 bg-[#151B23] border border-[#30363D] rounded-lg text-xs font-bold hover:bg-[#1C222B] transition-colors">Anterior</button>
                 <button
-                    class="px-4 py-2 bg-[#FD420A] text-white rounded-lg text-xs font-bold shadow-lg shadow-orange-900/20 active:scale-95 transition-all">Siguiente</button>
+                    class="bg-(--accent) hover:bg-(--accent-hover) text-white px-6 py-3 rounded-2xl text-sm font-bold flex items-center justify-center gap-2 transition-all shadow-xl shadow-orange-900/20 active:scale-95 cursor-pointer">Siguiente</button>
             </div>
         </div>
     </div>
