--- a/frontend/src/views/platform/roles/update.njk
+++ b/frontend/src/views/platform/roles/update.njk
@@ -47,7 +47,7 @@
                     <div class="px-8 py-5 bg-[#1C222B] flex items-center justify-between border-b border-[#30363D]">
                         <div class="flex items-center gap-4">
                             <div
-                                class="w-10 h-10 rounded-xl bg-[#FD420A]/10 text-[#FD420A] flex items-center justify-center">
+                                class="w-10 h-10 rounded-xl bg-(--accent)/10 text-(--accent) flex items-center justify-center">
                                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                         d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4">
@@ -96,7 +96,7 @@
                             <label
                                 class="block text-[10px] font-bold text-gray-400 mb-1 uppercase tracking-wider">Nombre</label>
                             <input id="role-name" type="text" placeholder="Ej: Moderador" name="role_name" required value="{{ permissions_selected_data.name }}"
-                                class="w-full bg-[#0B0F14] border border-[#30363D] rounded-xl px-4 py-2.5 text-sm focus:border-[#FD420A] outline-none">
+                                class="w-full bg-[#0B0F14] border border-[#30363D] rounded-xl px-4 py-2.5 text-sm focus:border-(--accent) outline-none">
                         </div>
                         <div>
                             <label
