--- a/frontend/src/views/auth/reset_password_sent.njk
+++ b/frontend/src/views/auth/reset_password_sent.njk
@@ -10,7 +10,7 @@
         <div class="w-24 h-24 rounded-2xl flex items-center justify-center mb-4">
             <img src="/public/img/logo.png">
         </div>
-        <h1 class="text-2xl font-bold tracking-tight uppercase">Nexo<span class="text-[#FD420A]">Local</span></h1>
+        <h1 class="text-2xl font-bold tracking-tight uppercase">Nexo<span class="text-(--accent)">Local</span></h1>
     </div>
 
     <div class="auth-card bg-[#151B23]/90 p-8 sm:p-10 rounded-[2.5rem] shadow-2xl w-full text-center">
@@ -33,7 +33,7 @@
 
         <div class="space-y-4">
             <a href="/auth"
-                class="block w-full bg-[#FD420A] hover:bg-[#E33A08] text-white py-4 rounded-2xl font-bold text-sm transition-all shadow-lg shadow-orange-900/20 active:scale-[0.98]">
+                class="bg-(--accent) hover:bg-(--accent-hover) text-white px-6 py-3 rounded-2xl text-sm font-bold flex items-center justify-center gap-2 transition-all shadow-xl shadow-orange-900/20 active:scale-95 cursor-pointer">
                 Volver al Inicio de Sesión
             </a>
 
@@ -41,7 +41,7 @@
                 <p class="text-[10px] text-gray-600 font-bold uppercase tracking-[0.2em] mb-2">
                     ¿No recibiste el correo?
                 </p>
-                <button class="text-[#FD420A] text-xs font-bold hover:underline uppercase tracking-wider">
+                <button class="text-(--accent) text-xs font-bold hover:underline uppercase tracking-wider">
                     Reenviar instrucciones
                 </button>
             </div> #}
