--- a/frontend/src/views/companies/products/batchs/create.njk
+++ b/frontend/src/views/companies/products/batchs/create.njk
@@ -150,7 +150,7 @@
                             <a href="/companies/{{ company_information.id }}/products/read/{{ product.id }}"
                                 class="text-sm font-semibold text-red-500 hover:text-red-700 transition-colors">Cancelar</a>
                             <button type="submit"
-                                class="bg-[#FD420A] hover:bg-[#ff5a26] text-white px-7 py-3 rounded-2xl text-base font-bold flex items-center justify-center gap-2 transition-all shadow-xl shadow-orange-900/20 active:scale-95 cursor-pointer">
+                                class="bg-(--accent) hover:bg-(--accent-hover) text-white px-6 py-3 rounded-2xl text-sm font-bold flex items-center justify-center gap-2 transition-all shadow-xl shadow-orange-900/20 active:scale-95 cursor-pointer">
                                 <i class="fa-solid fa-plus"></i>
                                 Crear Lote
                             </button>
