--- a/frontend/src/views/platform/users/main.njk
+++ b/frontend/src/views/platform/users/main.njk
@@ -82,11 +82,11 @@
                             </td>
                             <td class="px-8 py-6 text-right">
                                 <div class="flex justify-end gap-1">
-                                    <button
+                                    <a href="/platform/users/read/{{ usr.id }}"
                                         class="p-2.5 text-green-400 hover:text-white hover:bg-white/5 rounded-xl transition-all cursor-pointer"
                                         title="Editar">
-                                        <i class="fa-solid fa-pen-to-square"></i>
-                                    </button>
+                                        <i class="fa-solid fa-eye"></i>
+                                    </a>
                                     <button
                                         class="p-2.5 text-yellow-500 hover:bg-yellow-500/10 rounded-xl transition-all cursor-pointer"
                                         title="Suspender">
@@ -110,7 +110,7 @@
                 <button
                     class="px-4 py-2 bg-[#151B23] border border-[#30363D] rounded-lg text-xs font-bold hover:bg-[#1C222B] transition-colors cursor-pointer">Anterior</button>
                 <button
-                    class="px-4 py-2 bg-[#FD420A] text-white rounded-lg text-xs font-bold shadow-lg shadow-orange-900/20 active:scale-95 transition-all cursor-pointer">Siguiente</button>
+                    class="bg-(--accent) hover:bg-(--accent-hover) text-white px-6 py-3 rounded-2xl text-sm font-bold flex items-center justify-center gap-2 transition-all shadow-xl shadow-orange-900/20 active:scale-95 cursor-pointer">Siguiente</button>
             </div>
         </div>
 
